GearsetPOC/force-app/main/default/objects/RestServiceAccess__c/RestServiceAccess__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Credentials for rest api service</description>
    <label>RestServiceAccess</label>
</CustomObject>