GearsetPOC/force-app/main/default/objects/RestServiceAccess__c/fields/Jira_Api_Token__c.field-meta.xml
<CustomField>
    <fullName>Jira_Api_Token__c</fullName>
    <label>Jira Api Token</label>
    <length>64</length>
    <type>Text</type>
</CustomField>