GearsetPOC/force-app/main/default/objects/RestServiceAccess__c/fields/Jira_Issue_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Jira_Issue_Endpoint__c</fullName>
    <label>Jira Issue Endpoint</label>
    <length>127</length>
    <type>Text</type>
</CustomField>