GearsetPOC/force-app/main/default/objects/RestServiceAccess__c/fields/Jira_User_Email__c.field-meta.xml
<CustomField>
    <fullName>Jira_User_Email__c</fullName>
    <label>Jira User Email</label>
    <length>63</length>
    <type>Text</type>
</CustomField>